# gtest_example

./: CMakeLists.txt  README.md  foobar.hpp  myint.c  myint.cpp  myint.h  myint.hpp  mylib.cpp  mylib.hpp
test/: gtest_myint.cpp  mylib_test.cpp
